--- a/award/templates/myprojects.html
+++ b/award/templates/myprojects.html
@@ -2,29 +2,26 @@
 {% load static %}
 {% block content %}
 <div class="container">
-    <div class="row">
-
-        {% if projects %}
-        <div class="col s12 m7">
-            <div class="card">
+    
+        <div class="card-body" style="background-color: cornsilk;"></div>
+            {% if projects %}
+            <div class="row">
+            <div class="col s12 m6 l3">
                 {% for project in projects %}
-                <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4" style="color:white">
-                    <img class='streamimg' src="{{project.image.url}}" height="300px" width="95%" alt="{{ project.title }}"></img>
+                    <img class='streamimg' src="{{project.image.url}}" height="300px" width="75%" alt="{{ project.title }}"></img>
                     <br>
-                    <h5 class="card-title firstletter">{{project.title}}</h5>
-                    <p class="card-text firstletter">{{ project.description | truncatechars:450 }}</p>
-                    <p class="card-text"><a href="{% url 'project' project.id %}"><button type="button" class="btn btn-primary">View
-                                Project</button></a></p>
-                </div>
-            </div>
-            <br>
+                    <h5>{{project.title}}</h5>
+                    <p>{{ project.description | truncatechars:250 }}</p>
+                    <p><a href="{% url 'project' project.id %}"><button type="button" class="btn btn-primary">View
+                    Project</button></a></p>
+                <br>
+                {% endfor %}
 
-            <br>
-            {% endfor %}
+                {% else %}
+                <h3> Add Projects<a href="{% url 'new_projects' %}">here</a>.</h3>
+                {% endif %}
+            </div>
         </div>
-        {% else %}
-        <h3> Add Projects<a href="{% url 'new_projects' %}">here</a>.</h3>
-        {% endif %}
     </div>
 </div>
 {% endblock %}
